=item *

Fixed a regression that occurred in S<INN 2.5.0> when leading whitespace
have been made significant in header field bodies.  It could lead INN to
drop articles and throttle itself when running as a slave because Xref:
header fields generated by other news servers, or even S<INN 2.4.6>,
could contain (valid) leading whitespace.  Thanks to Matija Nalis for
having caught this bug.

=item *

It is now possible to properly generate daily statistics with B<sendinpaths>
thanks to the new B<-k> and B<-r> flags that permit to control the interval
of days for processing dump files.  The new B<-c> flag permits to send a
copy of the generated e-mail to the newsmaster.

Also fixed an issue with statistics that could be missing or duplicated
for a couple of days when monthly sent.

The documentation has been updated and mentions a preferred daily run of
B<sendinpaths>.  This script is a complete rewrite in Perl, and is based
on Mohan Kokal's initial work.

=item *

B<cnfsheadconf> now properly recognizes continuation lines in
F<cycbuff.conf>, that is to say lines ending with a backslash (C<\>).
Thanks to John S<F. Morse> for the bug report.

=item *

The order of CNFS buffers in a metacycbuff is now properly read and written
by B<cnfsheadconf>.  There previoulsy was a confusion between hexadecimal
and decimal values.  Thanks again to John S<F. Morse>.

=item *

When the B<-l> flag is given to B<cnfsstat>, the F<cycbuff.conf> and
F<storage.conf> files are now reloaded if they have been modified since
the previous output of B<cnfsstat>.

=item *

A single header field line is limited to 998 bytes, per S<RFC 5536>.  B<innd>
was previously accepting, and also generating Xref: header field lines,
up to 1022 bytes.  Now, B<nnrpd> (acting as an injecting agent) rejects
articles which contain header field lines whose length exceeds 998 bytes.
And B<innd> (acting as a relaying or serving agent) no longer checks that.

=item *
